Changes for adding vendor category and products